--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <!-- nav header -->
         <div class="nav-header">
           <img
-            src="./images/logo_v2.svg"
+            src="./images/logo_no_slogan.svg"
             class="nav-logo"
             alt="nav logo"
             height="60"
